terraform/v-net.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "test-vnet"
  resource_group_name = data.azurerm_resource_group.rg.name
  location            = var.location
  address_space       = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "web-subnet" {
  name                 = "web-subnet"
  virtual_network_name = azurerm_virtual_network.vnet.name
  resource_group_name  = data.azurerm_resource_group.rg.name
  address_prefixes     = ["10.0.1.0/24"]
}

# resource "azurerm_subnet" "app-subnet" {
#   name                 = "app-subnet"
#   virtual_network_name = azurerm_virtual_network.vnet.name
#   resource_group_name  = data.azurerm_resource_group.rg.name
#   address_prefixes     = ["10.0.2.0/24"]
# }

resource "azurerm_subnet" "db-subnet" {
  name                 = "db-subnet"
  virtual_network_name = azurerm_virtual_network.vnet.name
  resource_group_name  = data.azurerm_resource_group.rg.name
  address_prefixes     = ["10.0.3.0/24"]
}
